ARROW-1163: [Java] Java client support for plasma

--------------------------
This commit includes the support of java client for plasma, which is part of the java worker support of Ray.
In addition to some minor changes in build system, it consists of the following modules:
 - java/plasma: java client support for plasma
 - cpp/src/plasma/lib/java: JNI support for plasma client
 - java/plasma/Readme.md: Readme.md for help document
 - java/plasma/test.sh: test.sh for test

Author: salah-man <salah.liuyj@antfin.com>
Author: Philipp Moritz <pcmoritz@gmail.com>
Author: salah <salah.liuyj@antfin.com>

Closes #2065 from salah-man/java_lib and squashes the following commits:

be067e83 <salah-man> add the test case of contains and hash of plasma java client
b7f5e94f <salah-man> fix ci lint error
80e9580f <salah-man> small change for feedback
b745465c <salah-man> fix the problems after the feedback
52b26e74 <Philipp Moritz> Google C++ convention
2f3f129b <Philipp Moritz> cleanups
1c327a79 <salah-man> add ci of plasma java client
14393f5f <salah-man> fix the ci problem
3e9ba0db <salah-man> Changes for the feedback from pr -------------------------- It consists of the following changes:  add java/plasma/README.md for help document  add java/plasma/test.sh for plasma java client test case  fix some ci error  delete the useless parameters of connect api from jni
9da40d02 <salah-man> Delete the ObjectId.java and ObjectBuffer.java, change the input and output of plasma java client api from custem type to byte
87ba3b98 <salah> Java client support for plasma -------------------------- This commit includes the support of java client for plasma, which is part of the java worker support of Ray. In addition to some minor changes in build system, it consists of the following modules:  - java/plasma: java client support for plasma  - cpp/src/plasma/lib/java: JNI support for plasma client